# rovi_ros_ws

./: .env.pc  .env.robot  .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  clean.sh  detailed_plan.md  gen.md  implementation_details.md  offline.sh  peers.xml  plan.md  pyproject.toml  rovi_env.sh  run.sh
docs/: camera.md  contract.yaml  depth.md  depth_camera_analysis.md  depth_camera_astra_stereo_s_u3.md  diagrams.md  generation_log.md  install.md  lidar.md  nodes.md  reference.md  robot_modes.puml  runtime.md  stacks.md  stereo.md  stereo_elp.md  troubleshooting.md  usb.md  usb_topology.md  yahboom.md
docs/launches/: camera.md
docs/plan/: camera.md  camera_floor_known_geometry.md  camera_hardware_robustness.md  camera_preparation.md  camera_viewer_decorrelation.md  floor_clearance_from_depth.md  floor_diff_from_depth.md  floor_nav2_costmap_layer.md  floor_topology_semantics_review.md  improvement-forwarder_observability.md  improvement-no_pythonpath_mutation.md  improvement-ui_timestamps.md  services.md  ui_bridge_floor_topology_lossless.md  ui_bridge_floor_topology_stream.md  ui_bridge_frame_policy.md  usb_display_camera_troubleshooting_reports.md
docs/reports/: usb_monitoring.md
services/: install.sh  rovi-camera.service  rovi-gateway.service  rovi-localization.service  rovi-mapping.service  rovi-nav.service  rovi-teleop.service  run_common.sh  run_gateway.sh  run_stack.sh
services/polkit/: 10-rovi-stack.rules
src/openni2_camera/: README.md
src/robot_serial_display/: README.md  package.xml  setup.cfg  setup.py
src/robot_serial_display/config/: default.yaml
src/robot_serial_display/robot_serial_display/: config.py  serial_display_node.py  serial_display_test.py
src/ros_ui_bridge/: README.md  package.xml  setup.cfg  setup.py
src/ros_ui_bridge/config/: default.yaml  viz_downsample.yaml
src/ros_ui_bridge/proto/: ui_bridge.proto
src/ros_ui_bridge/ros_ui_bridge/: config.py  floor_topology_node.py  grpc_gateway.py  lidar_node.py  map_node.py  robot_model_provider.py  robot_state_node.py  robot_state_store.py  ros_metrics_node.py  session_info.py  status_store.py  throttled_forwarder.py  ui_bridge_node.py  viz_downsample_node.py
src/ros_ui_bridge/ros_ui_bridge/api/: __init__.py  ui_bridge_pb2.py  ui_bridge_pb2_grpc.py
src/ros_ui_bridge/ros_ui_bridge/conductor/: net.py  systemd.py
src/rovi_base/: CMakeLists.txt  README.md  package.xml
src/rovi_base/src/: rovi_base_node.cpp
src/rovi_bringup/: package.xml  refactor_plan.md  setup.cfg  setup.py
src/rovi_bringup/config/: bag_topics.yaml  rosmaster_driver.yaml  rovi_base.yaml  rovi_odom_integrator.yaml  teleop_twist_joy.yaml  twist_mux.yaml
src/rovi_bringup/config/camera_info/: color.yaml  depth.yaml
src/rovi_bringup/launch/: camera.launch.py  floor_calibrate.launch.py  floor_calibrate_sim.launch.py  floor_runtime.launch.py  gateway.launch.py  joy.launch.py  keyboard_teleop.launch.py  localization.launch.py  mapping.launch.py  nav.launch.py  offline_view.launch.py  perception.launch.py  robot_bringup.launch.py  rovi.launch.py  slam_mode.launch.py  state_estimation.launch.py  teleop.launch.py  viz.launch.py
src/rovi_bringup/rovi_bringup/: camera_info_pub.py  local_joint_states_node.py  session_state_pub.py  viz_downsample_node.py
src/rovi_bringup/rovi_bringup/cli/: __init__.py  bag.py  session.py
src/rovi_bringup/rovi_bringup/launch_lib/: __init__.py  args.py  camera_args.py  includes.py  modes.py
src/rovi_description/: package.xml  setup.cfg  setup.py
src/rovi_description/launch/: offline_view.launch.py  view.launch.py
src/rovi_description/meshes/mecanum/: wheel_RL_FR.stl  wheel_RR_FL.stl
src/rovi_description/resource/: rovi_description
src/rovi_description/rovi_description/: urdf_to_glb.py
src/rovi_description/rviz/: rovi.rviz  rovi_camera.rviz  rovi_map.rviz  rovi_nav.rviz  rovi_odom.rviz
src/rovi_description/urdf/: rovi.urdf
src/rovi_display_monitor/: package.xml  setup.cfg  setup.py
src/rovi_display_monitor/rovi_display_monitor/: display_monitor_node.py
src/rovi_floor/: CMakeLists.txt  package.xml
src/rovi_floor/src/: floor_calibrate_node.cpp  floor_runtime_node.cpp
src/rovi_gz_sensors_bridge/: CMakeLists.txt  package.xml
src/rovi_gz_sensors_bridge/src/: rovi_gz_sensors_bridge_node.cpp
src/rovi_localization/: package.xml  setup.cfg  setup.py
src/rovi_localization/config/: ekf_odom.yaml  ekf_odom_imu.yaml  imu_filter_madgwick.yaml  log_levels.yaml
src/rovi_localization/launch/: ekf.launch.py
src/rovi_localization/rovi_localization/: imu_marker_node.py
src/rovi_nav/: package.xml  setup.cfg  setup.py
src/rovi_nav/config/: nav2_params.yaml
src/rovi_nav/launch/: nav.launch.py
src/rovi_nav/resource/: rovi_nav
src/rovi_nav/rviz/: nav.rviz
src/rovi_odom_integrator/: CMakeLists.txt  README.md  package.xml
src/rovi_odom_integrator/src/: rovi_odom_integrator_node.cpp
src/rovi_serial_display/: README.md  package.xml  setup.cfg  setup.py
src/rovi_serial_display/config/: default.yaml
src/rovi_serial_display/rovi_serial_display/: config.py  serial_display_node.py
src/rovi_sim/: package.xml  setup.cfg  setup.py
src/rovi_sim/config/: bridge.yaml
src/rovi_sim/gui/: rovi_sim_gui.config
src/rovi_sim/launch/: gazebo_sim.launch.py
src/rovi_sim/resource/: rovi_sim
src/rovi_sim/rovi_sim/: gz_odom_node.py  local_joint_states_node.py  sim_base_node.py
src/rovi_sim/urdf/: rovi_sim.sdf.xacro
src/rovi_sim/worlds/: rovi_floor_only.sdf  rovi_room.sdf
src/rovi_ui_gateway/: README.md  package.xml  setup.cfg  setup.py
src/rovi_ui_gateway/config/: default.yaml
src/rovi_ui_gateway/proto/: ui_gateway.proto
src/rovi_ui_gateway/rovi_ui_gateway/: config.py  grpc_gateway.py  rate_tracker.py  ros_metrics_node.py  ros_voltage_subscriber.py  status_store.py  ui_gateway_node.py  voltage_state.py
src/rovi_ui_gateway/rovi_ui_gateway/api/: ui_gateway_pb2.py  ui_gateway_pb2_grpc.py
tools/: robot_display_setup.py  rovi_contract_test.py  rovi_display_setup.py  rovi_keyboard.py  rovi_stop.py  rovi_usb_cam_display_report.py  rovi_usb_setup.py
(+40 files in other folders)
