[project]
name = "rovi-ros-ws"
version = "0.1.0"
description = "ROS 2 Jazzy workspace Python dependencies for Room View Bot"
requires-python = ">=3.12"
dependencies = [
    "pyserial>=3.5",
    "psutil>=5.9",
    "colcon-common-extensions>=0.3",
    "grpcio>=1.60",
    "protobuf>=4.25",
    "PyYAML>=6.0",
    "catkin_pkg>=0.5",
    "rosmaster-lib",
    "lark>=1.1.9",
    "numpy>=2.4.1",
]

[tool.uv.sources]
rosmaster-lib = { git = "https://github.com/RobLibs/Rosmaster_Lib" }
