<?xml version="1.0"?>
<package format="3">
  <name>robot_serial_display</name>
  <version>0.1.0</version>
  <description>Serial display client: consumes ros_ui_bridge gRPC status stream and writes JSON lines to an ESP32-S3 display.</description>
  <maintainer email="wassim.filali@gmail.com">wassfila</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>ros_ui_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
