<?xml version="1.0"?>
<package format="3">
  <name>ros_ui_bridge</name>
  <version>0.1.0</version>
  <description>ROS UI bridge: collects low-rate status/metrics and serves them to UI clients over gRPC.</description>
  <maintainer email="wassim.filali@gmail.com">wassfila</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
