<?xml version="1.0"?>
<package format="3">
  <name>rovi_bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration files for Room View Bot teleoperation.</description>
  <maintainer email="wassim.filali@gmail.com">wassfila</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rovi_description</exec_depend>
  <exec_depend>rovi_odom_integrator</exec_depend>
  <exec_depend>rovi_localization</exec_depend>
  <exec_depend>rovi_slam</exec_depend>
  <exec_depend>rosmaster_driver</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>rovi_nav</exec_depend>
  <exec_depend>rovi_sim</exec_depend>
  <exec_depend>ros_ui_bridge</exec_depend>
  <exec_depend>robot_serial_display</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
