<?xml version="1.0"?>
<package format="3">
  <name>rovi_description</name>
  <version>0.1.0</version>
  <description>Robot description (URDF, meshes, RViz config) for the Rovi X3-based platform.</description>
  <maintainer email="wassim.filali@gmail.com">wassfila</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
